# openapi-ng

./: .gitattributes  .gitignore  .oxfmtrc.json  Cargo.toml  LICENSE  README.md  browser.js  build.rs  index.d.ts  index.d.ts.in  native.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: CI.yml  docs.yml
__test__/: .gitignore  browser.spec.ts  cli-parse.spec.ts  cli.spec.ts  diagnostic-codes-drift.spec.ts  fetch-input.spec.ts  generate.snapshot.spec.ts  generate.spec.ts  package.spec.ts  rest-util-base-path.spec.ts  tsconfig.json
__test__/angular-consumer/: package.json  tsconfig.bench-large.json  tsconfig.consumer.json  tsconfig.discriminator.json  tsconfig.emit-target.json  tsconfig.form-non-json.json  tsconfig.json  tsconfig.negative-binary-field.json  tsconfig.negative-validate-response.json  tsconfig.negative-validate.json  tsconfig.negative.json  tsconfig.service.json  tsconfig.validate.json
benchmark/: bench-budgets.json  bench.ts
lib/: config.js  error-marker.json  fetch-input.js  generate-error.js  index.js  wrapper-core.js
proptest-regressions/plan/: naming.txt
scripts/: check-version-not-placeholder.mjs  patch-types.mjs  regen-snapshots.mjs  smoke-wasm.mjs
src/: bindings.rs  error.rs  lib.rs  main.rs  options.rs  pipeline.rs  result.rs  test_support.rs
src/emit/: mod.rs  typescript.rs  typescript_tests.rs
src/io/: writer.rs
src/ir/: canonical.rs  identifier.rs  mod.rs  schema.rs  tests.rs
src/parse/: input.rs  mod.rs  (+2 more)
website/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
(+240 files in other folders)
